--- a/views/Home.templ
+++ b/views/Home.templ
@@ -1,5 +1,9 @@
 package views
 
-templ Home() {
-	<div>Hello World</div>
+import "github.com/camdenwithrow/twopecans/views/layouts"
+
+templ Home(env string) {
+	@layouts.Base(env) {
+		<div>Hello World</div>
+	}
 }
